<resources>
  <string name="app_name">HomeBrew Journal</string>
  <string name="action_settings">Settings</string>
  <string name="basic_info_detail_textView">Basic Info</string>
  <string name="title_activity_beer_list">BeerListActivity</string>

  <!-- Menu Strings -->
  <string name="action_logout">Logout</string>


  <string name="test">test</string>
  <string name="title_activity_new_beer">NewBeerActivity</string>

  <!--NewBeerActivity Hints-->
  <string name="hint_beer_name">Beer Name</string>
  <string name="hint_beer_style">Beer style</string>
  <string name="hint_beer_FG">Final Gravity</string>
  <string name="hint_beer_OG">Original Gravity</string>
  <string name="hint_beer_volume">Beer Volume</string>
  <string name="hint_beer_boil_volume">Boil Volume</string>

  <string name="text_view_basic_information">Basic Information</string>
  <string name="title_activity_sign_in">SignInActivity</string>
  <string name="sign_up">Sign Up</string>
  <string name="sign_in">Sign In</string>
  <string name="hint_password">password</string>
  <string name="hint_email">email</string>
  <string name="name">Name</string>
  <string name="style">Style</string>
  <string name="original_gravity">Original Gravity</string>
  <string name="final_gravity">Final Gravity</string>
  <string name="boiling_volume">Boiling Volume</string>
  <string name="beer_volume">Beer Volume</string>
  <string name="log_in">Log in with:</string>
  <string name="or">OR</string>
  <string name="beer_image_dialog_title">Choose Image</string>

  <!-- Content Description-->
  <string name="action_new_beer">Add New Beer</string>
  <string name="beer_image_description">Beer Image</string>

  <string name="new_hop">Add New Hop</string>
  <string name="new_malt">Add New Malt</string>
  <string name="delete">Delete</string>

  <!-- Dialog Delete Beer-->
  <string name="beer_deleted">Beer Deleted</string>
  <string name="dialog_delete_title">Delete Beer</string>
  <string name="dialog_delete_message">Do you really want to delete Beer?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="edit">Edit</string>
  <string name="save">Save</string>
  <string name="empty_space" />
  <string name="plato_degree">°P</string>
  <string name="litre">L</string>

  <!-- Dialog Add Hop-->
  <string name="dialog_hop_title">Enter name and weight of hop</string>
  <string name="dialog_malt_title">Enter name and weight of malt</string>
  <string name="hint_hop_name">Name</string>
  <string name="hint_hop_weight">Weight</string>
  <string name="gram">g</string>
  <string name="hops_detail_text_view">Hops</string>
  <string name="malts_detail_text_view">Malts</string>
  <string name="appwidget_text">Add New Beer</string>
  <string name="add_widget">Add widget</string>
  <string name="customize">Customize Beer Logo</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
