<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.julian.homebrewjournal.ui.NewBeerActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/text_view_basic_information"
                android:layout_marginBottom="16dp"/>

            <ImageView
                android:id="@+id/beer_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/new_beer_image_height"
                android:scaleType="centerCrop"
                android:src="@drawable/pale_ale"
                android:contentDescription="@string/beer_image_description"
                android:layout_marginBottom="16dp"/>

                    <!-- String Inputs -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_beer_name">
                <EditText
                    android:id="@+id/name_new_beer_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_beer_style">
                <EditText
                    android:id="@+id/style_new_beer_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

                    <!-- Double Inputs -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_beer_FG">
                <EditText
                    android:id="@+id/fg_new_beer_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_beer_OG">
                <EditText
                    android:id="@+id/og_new_beer_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_beer_volume">
                <EditText
                    android:id="@+id/beer_volume_new_beer_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_beer_boil_volume">
                <EditText
                    android:id="@+id/boil_volume_new_beer_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_beer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check_white_24dp"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@android:color/white"/>

</android.support.design.widget.CoordinatorLayout>
